[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/mockbuster_logo.png" type="Texture" id=4]
[ext_resource path="res://assets/sky_0.png" type="Texture" id=5]
[ext_resource path="res://assets/TV.png" type="Texture" id=6]
[ext_resource path="res://assets/clipboard.png" type="Texture" id=7]
[ext_resource path="res://assets/wall.png" type="Texture" id=8]
[ext_resource path="res://assets/vcr_top.png" type="Texture" id=9]
[ext_resource path="res://assets/vcr_bottom.png" type="Texture" id=10]
[ext_resource path="res://assets/vcr_slot_cover.png" type="Texture" id=11]
[ext_resource path="res://assets/VHS/vhs_0.png" type="Texture" id=12]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=13]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 400.0
margin_bottom = 200.0
color = Color( 0, 0.568627, 0.701961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sky_0" type="Sprite" parent="CanvasLayer"]
position = Vector2( 229.333, -157.333 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="background" type="Sprite" parent="CanvasLayer"]
position = Vector2( 138.667, 176 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="wall" type="Sprite" parent="CanvasLayer/background"]
position = Vector2( 0, -62 )
texture = ExtResource( 8 )

[node name="TV" type="Sprite" parent="CanvasLayer/background"]
position = Vector2( -20, -45.3333 )
texture = ExtResource( 6 )

[node name="VCR" type="Node2D" parent="CanvasLayer/background"]
position = Vector2( -32, 0 )

[node name="vcr_top" type="Sprite" parent="CanvasLayer/background/VCR"]
position = Vector2( 0, -10 )
texture = ExtResource( 9 )

[node name="vcr_bottom" type="Sprite" parent="CanvasLayer/background/VCR"]
position = Vector2( 0, 9 )
texture = ExtResource( 10 )

[node name="vcr_slot_cover" type="Sprite" parent="CanvasLayer/background/VCR"]
position = Vector2( 1, 2 )
texture = ExtResource( 11 )

[node name="vhs_0" type="Sprite" parent="CanvasLayer/background"]
position = Vector2( 37.3333, -2.66666 )
rotation = -1.26885
texture = ExtResource( 12 )

[node name="mockbuster_logo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 98.6667, 80 )
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 4 )

[node name="clipboard" type="Sprite" parent="CanvasLayer"]
position = Vector2( 326, 124 )
texture = ExtResource( 7 )

[node name="PlayButton" parent="CanvasLayer/clipboard" instance=ExtResource( 1 )]
margin_left = -51.3334
margin_top = -62.6667
margin_right = 48.6666
margin_bottom = -42.6667
rect_scale = Vector2( 1, 1 )
text = "TUTORIAL"

[node name="EndlessButton" parent="CanvasLayer/clipboard" instance=ExtResource( 1 )]
margin_left = -51.3333
margin_top = -14.6667
margin_right = 48.6667
margin_bottom = 5.33332
rect_scale = Vector2( 1, 1 )
text = "PLAY"

[node name="QuitButton" parent="CanvasLayer/clipboard" instance=ExtResource( 1 )]
visible = false
margin_left = -48.6667
margin_top = 33.3333
margin_right = 51.3333
margin_bottom = 53.3333
rect_scale = Vector2( 1, 1 )
text = "QUIT"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 352.0
margin_top = 192.0
margin_right = 464.0
margin_bottom = 206.0
rect_scale = Vector2( 0.66, 0.66 )
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0.235294, 0.235294, 0.235294, 0.501961 )
text = "V 0.1.3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="CanvasLayer/clipboard/PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="button_down" from="CanvasLayer/clipboard/EndlessButton" to="." method="_on_EndlessButton_button_down"]
[connection signal="button_down" from="CanvasLayer/clipboard/QuitButton" to="." method="_on_QuitButton_button_down"]
